# cpplibs

./: .gitignore  CMakeLists.txt  README.md
Embedonix/: Info.cpp  Info.h  LibInfo.cpp  LibInfo.h
Embedonix/Math/: BasicOperations.h
examples/: CMakeLists.txt
examples/fileio/: fileio.cpp
examples/math/: math.cpp
examples/parsers/: csvparser.cpp
examples/resources/csv-files/: simple-no-header.csv
examples/resources/random-files/: one-mb-file  two-mb-file
libs/fileio/: CMakeLists.txt  README.md
libs/fileio/include/embedonix/simplelibs/: filereader.h
libs/fileio/include/embedonix/simplelibs/fileio/: filereader.h
libs/fileio/src/: filereader.cpp
libs/math/: BasicOperations.h  CMakeLists.txt
libs/math/include/embedonix/simplelibs/math/: basic.h
libs/parsers/: CMakeLists.txt  README.md
libs/parsers/include/embedonix/simplelibs/: csvparser.h
libs/parsers/include/embedonix/simplelibs/parsers/: csvparser.h
libs/parsers/src/: csvparser.cpp
libs/stringtools/: CMakeLists.txt
libs/stringtools/include/embedonix/simplelibs/stringtools/: base.h  print.h  printer.h  split.h  trim.h
libs/stringtools/src/: trim.cpp
libs/utilities/: CMakeLists.txt
libs/utilities/include/embedonix/simplelibs/utilities/: benchmark.h
